--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             </div>
           </div>
           <div class="right">
-            <div class="right-mesaage">
+            <div class="right-message">
               Here are a few pictures. She’s a happy girl!
             </div>
           </div>
           <div class="right">
-            <div class="right-mesaage">Can you make it?</div>
+            <div class="right-message">Can you make it?</div>
           </div>
           <div class="left-message">
             She looks so happy! The time we discussed works. How long shall I
